嵌入H5页面，预订页面开发

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -53,6 +53,10 @@
                 android:id="@+id/item_jump2Amap"
                 android:icon="@drawable/ic_menu_send"
                 android:title="@string/jump2Amap" />
+            <item
+                android:id="@+id/item_login"
+                android:icon="@drawable/ic_menu_send"
+                android:title="@string/jump2Amap" />
         </menu>
 
     </item>
