--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -56,7 +56,7 @@
             <item
                 android:id="@+id/item_login"
                 android:icon="@drawable/ic_menu_send"
-                android:title="@string/jump2Amap" />
+                android:title="@string/login" />
         </menu>
 
     </item>
