--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,11 @@
     <color name="itemlist">#f4f4f4</color>
     <color name="watermark_hint">#ccffffff</color>
     <color name="act_background">#efefef</color>
+
+
+    <color name="t1">#efefef</color>
+    <color name="t2">#FF009DFF</color>
+
+
+
 </resources>
