预约界面开发 统一登录判断

--- a/app/src/main/res/layout/activity_login_layout.xml
+++ b/app/src/main/res/layout/activity_login_layout.xml
@@ -31,6 +31,7 @@
         android:hint="请输入账号"
         android:maxLength="14"
         android:padding="12dp"
+        android:textColor="@android:color/white"
         android:textColorHint="#79bdff"
         android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -50,8 +51,9 @@
         android:hint="请输入密码"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:textSize="14sp"
+        android:textColor="@android:color/white"
         android:textColorHint="#79bdff"
+        android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="@id/account_editText"
         app:layout_constraintRight_toRightOf="@id/account_editText"
         app:layout_constraintTop_toBottomOf="@id/account_editText" />
@@ -62,8 +64,8 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="忘记密码"
-        android:textSize="12sp"
         android:textColor="#52acff"
+        android:textSize="12sp"
         app:layout_constraintRight_toRightOf="@id/password_editText"
         app:layout_constraintTop_toBottomOf="@id/password_editText" />
 
@@ -86,8 +88,8 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="没有账号请注册"
-        android:textSize="12sp"
         android:textColor="#52acff"
+        android:textSize="12sp"
         app:layout_constraintRight_toRightOf="@id/login_button"
         app:layout_constraintTop_toBottomOf="@id/login_button" />
 
