--- a/app/src/main/res/layout/activity_retrieve_pwd.xml
+++ b/app/src/main/res/layout/activity_retrieve_pwd.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RetrievePwdActivity">
+    tools:context=".activity.RetrievePwdActivity">
 
 </android.support.constraint.ConstraintLayout>
