--- a/app/src/main/res/layout/order_detail_scrollview.xml
+++ b/app/src/main/res/layout/order_detail_scrollview.xml
@@ -2,14 +2,26 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_width="match_parent"
+    android:background="@android:color/white"
     android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="32dp">
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/cover_imageView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="@string/app_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintDimensionRatio="16:9"
+            android:scaleType="centerCrop"
+            android:background="@android:color/black"
+            android:src="@mipmap/icon" />
 
         <TextView
             android:id="@+id/name_textView"
@@ -22,7 +34,7 @@
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cover_imageView"
             tools:text="停车场名称" />
 
         <TextView
@@ -202,6 +214,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
+            android:paddingBottom="14dp"
             android:text="停车场电话"
             android:textColor="#4d4d4d"
             android:textSize="13sp"
@@ -214,23 +227,13 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
             android:textSize="13sp"
+            android:paddingBottom="14dp"
             app:layout_constraintBottom_toBottomOf="@id/tel"
             app:layout_constraintRight_toRightOf="@id/name_textView"
             app:layout_constraintTop_toTopOf="@id/tel"
             tools:text="010-78785757" />
 
-        <Button
-            android:id="@+id/order_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/order_bg_solid_shape"
-            android:text="预约车位"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            app:layout_constraintLeft_toLeftOf="@id/name_textView"
-            app:layout_constraintRight_toRightOf="@id/name_textView"
-            app:layout_constraintTop_toBottomOf="@id/tel"/>
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v4.widget.NestedScrollView>
