去除导航栏测试Item

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -42,7 +42,7 @@
         android:background="#00000000"
         android:src="@android:drawable/ic_menu_mylocation"
         app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="right|center" />
+        app:layout_anchorGravity="right|bottom" />
 
 
 </android.support.design.widget.CoordinatorLayout>
