--- a/app/src/main/res/layout/order_list_item_layout.xml
+++ b/app/src/main/res/layout/order_list_item_layout.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@android:color/white"
     android:layout_height="wrap_content">
 
     <View
         android:id="@+id/line"
         android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:background="@android:color/transparent"
+        android:layout_height="5dp"
+        android:background="#f7f8f9"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
