个人中心页面修改

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -68,9 +68,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/login_form_bg_shape"
-        android:drawableLeft="@mipmap/password_icon"
+        android:drawableLeft="@mipmap/tel_icon"
         android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/password_icon"
+        android:drawableStart="@mipmap/tel_icon"
         android:hint="请输入电话"
         android:maxLength="11"
         android:inputType="phone"
