--- a/app/src/main/res/layout/activity_login_layout.xml
+++ b/app/src/main/res/layout/activity_login_layout.xml
@@ -7,15 +7,24 @@
     android:background="@mipmap/login"
     tools:context=".activity.LoginActivity">
 
+    <cn.beatle.parking.view.TitleBar
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/all_topbar"
+        app:statusbar_light="true"
+        app:background_color="@android:color/transparent"
+        app:leftDrawable="@mipmap/back_icon"/>
+
     <ImageView
         android:id="@+id/logo_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="4dp"
         android:src="@mipmap/logo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/title_bar" />
 
     <EditText
         android:id="@+id/account_editText"
@@ -40,7 +49,7 @@
         app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
-        android:id="@+id/password_editText"
+        android:id="@+id/tel_editText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -66,8 +75,8 @@
         android:text="忘记密码"
         android:textColor="#52acff"
         android:textSize="12sp"
-        app:layout_constraintRight_toRightOf="@id/password_editText"
-        app:layout_constraintTop_toBottomOf="@id/password_editText" />
+        app:layout_constraintRight_toRightOf="@id/tel_editText"
+        app:layout_constraintTop_toBottomOf="@id/tel_editText" />
 
     <Button
         android:id="@+id/login_button"
