--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,42 +5,48 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@color/unify_bg_color"
-    android:paddingLeft="15dp"
-    android:gravity="start|center_vertical">
+    android:gravity="start|center_vertical"
+    android:paddingLeft="15dp">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:contentDescription="@string/nav_header_desc"
         android:src="@mipmap/avatar_default" />
 
-    <TextView
-        android:id="@+id/tel_textView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/imageView"
+        android:orientation="vertical"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_centerVertical="true"
         android:layout_toEndOf="@id/imageView"
-        android:layout_toRightOf="@id/imageView"
-        android:text="@string/nav_header_title"
-        android:textColor="@android:color/black"
-        tools:text="187****5445" />
+        android:layout_toRightOf="@id/imageView">
 
-    <TextView
-        android:id="@+id/carNo_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/imageView"
-        android:layout_alignLeft="@id/tel_textView"
-        android:layout_alignStart="@id/tel_textView"
-        android:background="@drawable/car_no_bg"
-        android:paddingBottom="3dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="3dp"
-        tools:text="冀AF***8"
-        android:textColor="#bfc0c1" />
+        <TextView
+            android:id="@+id/tel_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/nav_header_title"
+            android:textColor="@android:color/black"
+            tools:text="187****5445" />
+
+        <TextView
+            android:id="@+id/carNo_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/car_no_bg"
+            android:layout_marginTop="5dp"
+            android:paddingBottom="3dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="3dp"
+            android:visibility="gone"
+            android:textColor="#bfc0c1"
+            tools:text="冀AF***8" />
+    </LinearLayout>
 </RelativeLayout>
 
