--- a/app/src/main/res/layout/activity_parking_renting.xml
+++ b/app/src/main/res/layout/activity_parking_renting.xml
@@ -20,8 +20,9 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
+        <!--android:layout_alignParentStart="true"-->
+
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -32,7 +33,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
                 android:layout_marginTop="100dp"
                 android:drawablePadding="18dp"
                 android:drawableTop="@mipmap/order_succ"
@@ -43,6 +43,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+            <!--android:layout_alignParentStart="true"-->
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
