订单时间修改、忘记密码修改

--- a/app/src/main/res/layout/activity_update_pwd.xml
+++ b/app/src/main/res/layout/activity_update_pwd.xml
@@ -38,8 +38,7 @@
         android:drawablePadding="5dp"
         android:drawableStart="@mipmap/password_icon"
         android:hint="请输入旧密码"
-        android:inputType="phone"
-        android:maxLength="11"
+        android:inputType="textPassword"
         android:padding="12dp"
         android:textColor="@android:color/white"
         android:textColorHint="#79bdff"
