--- a/app/src/main/res/layout/activity_order_result.xml
+++ b/app/src/main/res/layout/activity_order_result.xml
@@ -134,11 +134,11 @@
             <com.amap.api.maps2d.MapView
                 android:id="@+id/map"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginLeft="23dp"
                 android:layout_marginRight="23dp"
-                android:layout_marginTop="32dp"
-                android:minHeight="200dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintDimensionRatio="16:9"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/order_info_layout"
