--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@color/transparent</item>
+        <item name="android:screenOrientation">portrait</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
