--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@color/transparent</item>
         <item name="android:screenOrientation">portrait</item>
+        <item name="android:launchMode">singleTop</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -47,5 +48,41 @@
     <style name="transparentText" parent="TextAppearance.AppCompat.Small">
         <item name="android:textColor">#00000000</item>
 
+    </style>
+
+    <style name="LPDialogBaseTheme">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+    <style name="LPDialogDimTheme" parent="@style/LPDialogBaseTheme">
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.4</item>
+    </style>
+
+    <style name="WindowSlideTopAnim">
+        <item name="android:windowEnterAnimation">@anim/slide_in_top</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_top</item>
+    </style>
+
+    <style name="WindowSlideBottomAnim">
+        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
+    </style>
+
+    <style name="WindowFadeAnim">
+        <item name="android:windowEnterAnimation">@anim/fade_in_center</item>
+        <item name="android:windowExitAnimation">@anim/fade_out_center</item>
+    </style>
+    <style name="WindowSlideRightAnim">
+        <item name="android:windowEnterAnimation">@anim/slide_in_right</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_right</item>
+    </style>
+    <style name="LPDialogTranTheme" parent="@style/LPDialogBaseTheme">
+        <item name="android:backgroundDimEnabled">false</item>
     </style>
 </resources>
